# Macos_live2d_deskpet

./: .gitignore  CMakeLists.txt  README.md  readme.md
Framework/: CMakeLists.txt
Framework/src/: CubismCdiJson.hpp  CubismFramework.hpp  CubismModelSettingJson.cpp  ICubismModelSetting.hpp
Framework/src/Math/: CubismTargetPoint.cpp
Framework/src/Model/: CubismModel.hpp  CubismUserModel.cpp  CubismUserModel.hpp
Framework/src/Motion/: CubismMotion.cpp  CubismMotion.hpp  CubismMotionManager.cpp  CubismMotionManager.hpp  CubismMotionQueueManager.cpp
Framework/src/Rendering/: CubismRenderer.cpp  CubismRenderer.hpp
Framework/src/Rendering/OpenGL/: CubismRenderer_OpenGLES2.cpp
Framework/src/Type/: CubismBasicType.hpp  csmString.hpp
Framework/src/Utils/: CubismJson.hpp
Resources/: CF.icns  config.json
Resources/Haru/: Haru.model3.json
Resources/lafei_4/: lafei_4.model3.json
Resources/paimeng/: paimeng.model3.json
Resources/草神/: 草神.model3.json  黑.exp3.json
Resources/草神/motions/: 1.motion3.json  待机动画.motion3.json
inc/: LAppAllocator.hpp  LAppDefine.hpp  LAppDelegate.hpp  LAppLive2DManager.hpp  LAppModel.hpp  LAppPal.hpp  LAppWavFileHandler.hpp  TouchManager.hpp  event_handler.hpp  message_queue.hpp  resource_loader.hpp
src/: AudioUtil.cpp  AudioUtil.h  AudioUtil.mm  AudioVolum.cpp  AudioVolum.h  CMakeLists.txt  ChatDialog.cpp  ChatDialog.h  LAppDefine.cpp  LAppDelegate.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppPal.cpp  LAppView.cpp  LAppWavFileHandler.cpp  LAppWavFileHandler.mm  Log_util.h  MouseEvent.h  MouseEvent.mm  Networkutil.cpp  Networkutil.h  Transparent.h  Transparent.mm  event_handler.cpp  glwidget.cpp  glwidget.h  main.mm  mainwindow.cpp  mainwindow.h  mainwindow.mm  mainwindow.ui  message_queue.cpp  qf_log.h  resource_loader.cpp
